--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/postcss": "^4.1.13",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
